Implemented TurnFactory interface and added tests